Added readme and changed all linkedlists to arraylists for better efficiency